<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/menu_primary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home" />

        <item
            android:id="@+id/nav_decks"
            android:icon="@drawable/ic_deck"
            android:title="@string/decks" />

        <item
            android:id="@+id/nav_pomodoro"
            android:icon="@drawable/ic_clock"
            android:title="@string/pomodoro_timer" />
    </group>

    <group
        android:id="@+id/menu_secondary"
        android:checkableBehavior="none"
        android:visible="false">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />

        <item
            android:id="@+id/nav_comment"
            android:icon="@drawable/ic_comment"
            android:visible="false"
            android:title="@string/send_comment" />

        <item
            android:id="@+id/nav_rate"
            android:icon="@drawable/ic_rate"
            android:visible="false"
            android:title="@string/rate_app" />
    </group>

    <group
        android:id="@+id/menu_tertiary"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_exit"
            android:title="@string/logout" />
    </group>

</menu>