<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.emanuelgalvao.studies.ui.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_deck_cards"
            app:destination="@id/nav_deck_cards" />
        <action
            android:id="@+id/action_nav_home_to_nav_pomodoro"
            app:destination="@id/nav_pomodoro" />
    </fragment>

    <fragment
        android:id="@+id/nav_decks"
        android:name="com.emanuelgalvao.studies.ui.fragment.DecksFragment"
        android:label="@string/decks"
        tools:layout="@layout/fragment_decks" >
        <action
            android:id="@+id/action_nav_decks_to_nav_deck_cards"
            app:destination="@id/nav_deck_cards" />
    </fragment>

    <fragment
        android:id="@+id/nav_pomodoro"
        android:name="com.emanuelgalvao.studies.ui.fragment.PomodoroTimerFragment"
        android:label="@string/pomodoro_timer"
        tools:layout="@layout/fragment_pomodoro_timer" />

    <fragment
        android:id="@+id/nav_deck_cards"
        android:name="com.emanuelgalvao.studies.ui.fragment.DeckCardsFragment"
        android:label="@string/cards"
        tools:layout="@layout/fragment_deck_cards" >
        <argument
            android:name="deck"
            app:argType="com.emanuelgalvao.studies.model.Deck" />
    </fragment>

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.emanuelgalvao.studies.ui.fragment.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />


</navigation>