<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".ui.activity.ResultActivity">

    <TextView
        android:id="@+id/text_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/result"
        android:textAllCaps="true"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/color_primary" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/chart_result"
        android:layout_width="0dp"
        android:layout_height="300dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_result"
        app:layout_constraintBottom_toTopOf="@id/text_total"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="30dp" />

    <TextView
        android:id="@+id/text_total"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/chart_result"
        app:layout_constraintBottom_toTopOf="@id/text_corrects"
        android:layout_marginTop="10dp"
        android:text="@string/placeholder_cards"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/color_primary" />

    <TextView
        android:id="@+id/text_corrects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_total"
        android:text="@string/placeholder_correct"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/text_green" />

    <TextView
        android:id="@+id/text_errors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_corrects"
        android:text="@string/placeholder_errors"
        android:textAllCaps="true"
        android:textSize="25sp"
        android:textColor="@color/text_red" />

    <Button
        android:id="@+id/button_restart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@id/button_back_deck"
        android:layout_marginHorizontal="30dp"
        android:backgroundTint="@color/button_green"
        android:text="@string/study_again" />

    <Button
        android:id="@+id/button_back_deck"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginHorizontal="30dp"
        android:layout_marginBottom="20dp"
        android:text="@string/back_to_deck" />

</androidx.constraintlayout.widget.ConstraintLayout>