<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/activity_padding"
    tools:context=".ui.fragment.DeckCardsFragment">

    <Button
        android:id="@+id/button_start"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:backgroundTint="@color/button_green"
        android:text="@string/start" />

    <Button
        android:id="@+id/button_add_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_start"
        android:text="@string/new_card" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_add_card"
        android:layout_marginTop="20dp"
        android:background="@color/color_primary" />

    <TextView
        android:id="@+id/text_cards"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/button_add_card"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/cards"
        android:textColor="@color/color_primary"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:background="@color/white" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_cards"
        android:layout_marginTop="20dp"
        android:indeterminateTint="@color/color_primary"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/text_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/progress"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/loading_cards"
        android:textSize="18sp"
        android:textColor="@color/color_primary"
        android:visibility="gone"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_cards"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_cards"
        tools:listitem="@layout/adapter_card" />

</androidx.constraintlayout.widget.ConstraintLayout>