<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/image_background"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:scaleType="fitXY"
        android:alpha="0.2"
        android:src="@drawable/background_1" />

    <TextView
        android:id="@+id/text_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="50dp"
        android:text="@string/app_name"
        android:textSize="60sp"
        android:fontFamily="@font/pacifico"
        android:textColor="@color/white" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_logo"
        android:layout_marginTop="25dp"
        android:layout_marginHorizontal="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:startIconDrawable="@drawable/ic_email"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_transparent"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textfield_password"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textfield_email"
        android:layout_marginTop="8dp"
        android:layout_marginHorizontal="30dp"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        app:startIconDrawable="@drawable/ic_lock"
        android:hint="@string/password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/input_transparent"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/textfield_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/shape_primary_button"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/text_enter"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingVertical="5dp"
            android:gravity="center"
            android:text="@string/enter"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:textAllCaps="true" />

        <ProgressBar
            android:id="@+id/progress_login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:paddingVertical="10dp"
            android:indeterminateTint="@color/white"
            android:visibility="gone"/>

    </LinearLayout>

    <TextView
        android:id="@+id/text_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="60dp"
        android:text="@string/register_login"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textColor="@color/text_white"
        android:textStyle="bold"/>

</androidx.constraintlayout.widget.ConstraintLayout>