<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_padding"
    tools:context=".ui.fragment.HomeFragment">

    <TextView
        android:id="@+id/text_hello"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/text_hello"
        android:textColor="@color/color_primary"
        android:textSize="22sp"
        android:background="@color/white" />

    <View
        android:layout_width="0dp"
        android:layout_height="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_hello"
        android:layout_marginTop="20dp"
        android:background="@color/color_primary" />

    <TextView
        android:id="@+id/text_favorite_decks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/text_hello"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:paddingHorizontal="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/favorites_decks"
        android:textColor="@color/color_primary"
        android:textAllCaps="true"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="22sp"
        android:background="@color/white" />

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_favorite_decks">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />
            <include layout="@layout/shimmer_placeholder_adapter_deck" />

        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_decks"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_favorite_decks"
        app:layout_constraintBottom_toTopOf="@id/button_timer"
        tools:listitem="@layout/adapter_deck"
        android:visibility="gone"/>

    <Button
        android:id="@+id/button_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/go_to_timer" />

</androidx.constraintlayout.widget.ConstraintLayout>